--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Online markdown editor",
   "author": "lucas-carl <mail@lucascarl.com>",
   "private": true,
-	"scripts": {
+  "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
@@ -12,8 +12,9 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint"
   },
-	"dependencies": {
+  "dependencies": {
     "axios": "^0.16.2",
+    "marked": "^0.3.6",
     "nuxt": "^1.0.0-rc5"
   },
   "devDependencies": {
@@ -26,7 +27,7 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-		"mockingbird-sass": "latest",
+    "mockingbird-sass": "latest",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6"
   }
